[package]
name = "ulmen-core"
version = "0.1.0"
edition = "2021"
authors = ["UlmenDB Contributors"]
description = "Storage engine for agentic AI workloads"
license = "Apache-2.0"

[lib]
name = "ulmen_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
crc32fast = "1.4"

[dev-dependencies]
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
