[package]
name = "uldb"
version = "0.1.0"
edition = "2021"
authors = ["El Mehdi Makroumi"]
description = "Agentic AI database -- storage engine and server"
license = "BUSL-1.1"

[lib]
name = "uldb"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "uldb"
path = "src/bin/uldb.rs"

[dependencies]
crc32fast = "1.4"
flate2 = "1.0"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
ulmp = { path = "../ulmp", optional = true }
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }

[features]
default = ["server"]
server = ["ulmp"]
python = ["pyo3"]

[dev-dependencies]
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[test]]
name = "e2e_gaps"
path = "tests/rust/e2e_gaps.rs"
required-features = ["server"]

[[test]]
name = "scan_read_through"
path = "tests/rust/scan_read_through.rs"
required-features = ["server"]
