[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ulmen"
version = "0.1.0"
description = "Agentic AI database. Zero external dependencies."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[tool.maturin]
python-source = "python"
module-name = "ulmen._core"
features = ["pyo3/extension-module"]
