[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "uldb"
version = "0.1.0"
description = "Agentic AI database. Storage engine with MVCC, WAL, LSM compaction."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BUSL-1.1"}
authors = [{name = "El Mehdi Makroumi"}]

[tool.maturin]
python-source = "python"
module-name = "uldb._core"
features = ["pyo3/extension-module", "python"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
